db-ingress/db-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-dev-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /dev/read
        pathType: Prefix
        backend:
          service:
            name: read-service
            port: 
              number: 3306
          
      - path: /dev/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port: 
              number: 3306
          
      - path: /dev/scheduler
        pathType: Prefix
        backend:
          service:
            name: scheduler-service
            port: 
              number: 3306
              
      - path: /dev/log
        pathType: Prefix
        backend:
          service:
            name: log-service
            port: 
              number: 3306
              
      - path: /dev/broker
        pathType: Prefix
        backend:
          service:
            name: broker-service
            port: 
              number: 3306
              
      - path: /dev/request
        pathType: Prefix
        backend:
          service:
            name: request-service
            port: 
              number: 3306
              
      - path: /dev/sending
        pathType: Prefix
        backend:
          service:
            name: sending-service
            port: 
              number: 3306
              
      - path: /dev/keycloak
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port: 
              number: 3306
